Fix: adjust height down on tablets and larger

--- a/src/stylesheets/base/_structure.scss
+++ b/src/stylesheets/base/_structure.scss
@@ -11,7 +11,7 @@
 @screen tabp {
     .step,
     .container-inner {
-        @apply min-h-stretch;
+        @apply h-stretch;
     }
 }
 
